src/component/progress_bar/snapshots/envision__component__progress_bar__tests__view_with_eta_and_rate.snap
---
source: src/component/progress_bar/tests.rs
assertion_line: 553
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│████████████████████████                                  │
│████████Loading... 42% [5.2 items/sec] ETA: 3m 22s        │
│████████████████████████                                  │
└──────────────────────────────────────────────────────────┘
