src/component/progress_bar/snapshots/envision__component__progress_bar__tests__view_without_label.snap
---
source: src/component/progress_bar/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│█████████████████████████████         │
│█████████████████75% ████████         │
│█████████████████████████████         │
└──────────────────────────────────────┘
